Fix minor css bug when indicator name too long

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,11 @@ ul li:nth-child(4n-2) {
   right: 10%;
 }
 
+.total > .val > * {
+  width: 200px;
+  height: 41px;
+}
+
 .banner .prev {
   position: absolute;
   bottom: 20px;
